--- a/TestRCode.html
+++ b/TestRCode.html
@@ -32,7 +32,7 @@
   
   
 <link rel="prev" href="documenting-r.html"/>
-<link rel="next" href="r-core-developers.html"/>
+<link rel="next" href="news-and-announcements.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -215,11 +215,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.3" data-path="TestRCode.html"><a href="TestRCode.html#writing-tests-for-r"><i class="fa fa-check"></i><b>7.3</b> Writing tests for R</a></li>
 <li class="chapter" data-level="7.4" data-path="TestRCode.html"><a href="TestRCode.html#benchmarks"><i class="fa fa-check"></i><b>7.4</b> Benchmarks</a></li>
 </ul></li>
-<li class="chapter" data-level="8" data-path="r-core-developers.html"><a href="r-core-developers.html"><i class="fa fa-check"></i><b>8</b> R Core Developers</a></li>
-<li class="chapter" data-level="9" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html"><i class="fa fa-check"></i><b>9</b> Where to get help</a><ul>
-<li class="chapter" data-level="9.1" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#slack"><i class="fa fa-check"></i><b>9.1</b> Slack</a></li>
-<li class="chapter" data-level="9.2" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#mailing-lists"><i class="fa fa-check"></i><b>9.2</b> Mailing Lists</a></li>
-<li class="chapter" data-level="9.3" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#file-a-bug"><i class="fa fa-check"></i><b>9.3</b> File a Bug</a></li>
+<li class="chapter" data-level="8" data-path="news-and-announcements.html"><a href="news-and-announcements.html"><i class="fa fa-check"></i><b>8</b> News and Announcements</a><ul>
+<li class="chapter" data-level="8.1" data-path="news-and-announcements.html"><a href="news-and-announcements.html#blogs"><i class="fa fa-check"></i><b>8.1</b> Blogs</a></li>
+<li class="chapter" data-level="8.2" data-path="news-and-announcements.html"><a href="news-and-announcements.html#conferences"><i class="fa fa-check"></i><b>8.2</b> Conferences</a></li>
+<li class="chapter" data-level="8.3" data-path="news-and-announcements.html"><a href="news-and-announcements.html#journal"><i class="fa fa-check"></i><b>8.3</b> Journal</a></li>
+<li class="chapter" data-level="8.4" data-path="news-and-announcements.html"><a href="news-and-announcements.html#mailing-lists"><i class="fa fa-check"></i><b>8.4</b> Mailing lists</a></li>
+<li class="chapter" data-level="8.5" data-path="news-and-announcements.html"><a href="news-and-announcements.html#twitter"><i class="fa fa-check"></i><b>8.5</b> Twitter</a></li>
+</ul></li>
+<li class="chapter" data-level="9" data-path="r-core-developers.html"><a href="r-core-developers.html"><i class="fa fa-check"></i><b>9</b> R Core Developers</a></li>
+<li class="chapter" data-level="10" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html"><i class="fa fa-check"></i><b>10</b> Where to get help</a><ul>
+<li class="chapter" data-level="10.1" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#slack"><i class="fa fa-check"></i><b>10.1</b> Slack</a></li>
+<li class="chapter" data-level="10.2" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#mailing-lists-1"><i class="fa fa-check"></i><b>10.2</b> Mailing Lists</a></li>
+<li class="chapter" data-level="10.3" data-path="WhereToGetHelp.html"><a href="WhereToGetHelp.html#file-a-bug"><i class="fa fa-check"></i><b>10.3</b> File a Bug</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -286,7 +293,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
         </div>
       </div>
 <a href="documenting-r.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="r-core-developers.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="news-and-announcements.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
